FEAT: Add about us image to index.html

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %}Rewild your way to carbon neutrality and beyond{% endblock %}
+{% block head_title %}All about Wild Carbon{% endblock %}
 
 {% block description %}
-    <meta name="description" content="On this page you can learn about wild carbon and what we can do for you">
+    <meta name="description" content="On this page you can learn more about wild carbon">
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
             <h1 class="page-title-main">Wild Carbon</h1>
             <h2 class="page-title-secondary">Rewild your way to carbon neutrality</h2>
             <!-- Image supplied by font awesome https://fontawesome.com/  -->
-            <img class="page-title-image" src="{% static 'home/images/home_index_seedling.svg' %}" alt="A seedling">
+            <img class="page-title-image" src="{% static 'static_media/images/home_index_seedling.svg' %}" alt="A seedling">
         </div>
     </div>
     <div class="content-container">
@@ -26,18 +26,6 @@
     
                 On placing your order with us, we begin the process of growing your selected trees. Once of the required maturity, these trees are then planted out onto our protected site and allowed to grow indefinitely, gradually sequestering carbon for you.
             </p>
-        </div>
-    </div>
-    <div class="image-nav-container">
-        <div class="image-nav-title">
-            <h1 class="image-nav-title-main">Carbon Caputre</h1>
-            <h2 class="image-nav-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</h2>
-        </div>
-    </div>
-    <div class="image-nav-container">
-        <div class="image-nav-title">
-            <h1 class="image-nav-title-main">About Us</h1>
-            <h2 class="image-nav-title-secondary">Get to know the team waiting to grow your trees</h2>
         </div>
     </div>
     <div class="content-container">
