--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,22 +204,31 @@ main {
     flex-grow: 1;
 }
 
-.page-title-container {
+.page-title-container,
+.image-nav-container {
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/static_media/images/base_home_index_glade.jpg") no-repeat center center/cover;
+    background: url("/static/images/base_home_index_glade.jpg") no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.image-nav-container {
+    /* Image sourced at https://www.pexels.com/photo/close-up-shot-of-a-person-holding-a-plant-5027792/ */
+    background: url("/static/home/images/home_about_us_plug_plant.jpg") no-repeat center center/cover;
+    height: 500px;
+    width: 500px;
+}
+
 .carbon-capture-title-container {
     /* Image sourced at https://iowalandcompany.com/jones-county-iowa-80-acres-for-sale/ */
-    background: url("/static/static_media/images/carbon_capture_location.jpg") no-repeat center center/cover;
+    background: url("/locations/static/images/carbon_capture_location.jpg") no-repeat center center/cover;
     height: 175px;
 }
 
-.page-title {
+.page-title,
+.image-nav-title {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -232,15 +241,18 @@ main {
     background-color: var(--page-title-background-colour);
 }
 
-.page-title-main {
+.page-title-main,
+.image-nav-title-main {
     font-weight: bold;
 }
 
-.page-title-secondary {
+.page-title-secondary,
+.image-nav-title-secondary {
     font-size: small;
 }
 
-.page-title-image {
+.page-title-image,
+.image-nav-image {
     margin-top: 3rem;
     height: 3rem;
 }
