--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,33 +20,51 @@
         <div class="inner-content-container">
             <h2 class="content-header">What we do</h2>
             <p class="text-content">
-                ‘Wild Carbon’ is a company that can enable you to rewild your way to a carbon neutral or even carbon negative life! 
+                ‘Wild Carbon’ is a company that can enable you to rewild your way 
+                to a carbon neutral or even carbon negative life! 
 
-                We provide you with the opportunity to commission the growth and planting of trees of your choosing at our location in the west of Ireland.
+                We provide you with the opportunity to commission the growth and 
+                planting of trees of your choosing at our location in the west of Ireland.
     
-                On placing your order with us, we begin the process of growing your selected trees. Once of the required maturity, these trees are then planted out onto our protected site and allowed to grow indefinitely, gradually sequestering carbon for you.
+                On placing your order with us, we begin the process of growing your 
+                selected trees. Once of the required maturity, these trees are then planted 
+                out onto our protected site and allowed to grow indefinitely, gradually 
+                sequestering carbon for you.
             </p>
         </div>
     </div>
-    <div class="image-nav-container">
+    <a href="{% url 'carbon_capture' %}" class="carbon-capture-image-nav-container image-nav-container">
         <div class="image-nav-title">
-            <h1 class="image-nav-title-main">Carbon Caputre</h1>
-            <h2 class="image-nav-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</h2>
+            <div class="image-nav-title-main">Carbon Capture</div>
+            <div class="image-nav-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</div>
         </div>
-    </div>
-    <div class="image-nav-container">
+    </a>
+    <a href="{% url 'about_us' %}" class="image-nav-container about-us-image-nav-container">
         <div class="image-nav-title">
-            <h1 class="image-nav-title-main">About Us</h1>
-            <h2 class="image-nav-title-secondary">Get to know the team waiting to grow your trees</h2>
+            <div class="image-nav-title-main">About Us</div>
+            <div class="image-nav-title-secondary">Get to know the team waiting to grow your trees</div>
         </div>
-    </div>
+    </a>
     <div class="content-container">
         <div class="inner-content-container">
             <h2 class="content-header">Coming Soon</h2>
             <p class="text-content">
-                Revisit soon when you’ll have the opportunity to sponsor a cubic meter of blanket bog. Blanket bog is currently being cut and used as fuel. By sponsoring the purchase of blanket bog you are contributing to the reflooding and restoration of the bog. 
+                Revisit soon when you’ll have the opportunity to sponsor a cubic meter of blanket bog. 
+                Blanket bog is currently being cut and used as fuel. By sponsoring the purchase of blanket 
+                bog you are contributing to the reflooding and restoration of the bog. 
 
-                A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog that would otherwise release carbon you could offset your life’s carbon by sponsoring just 37 meters squared of 2 meter deep blanket bog for €100!                
+                A cubic meter of blanket bog can release up to 385kg of CO2! By paying to preserve bog 
+                that would otherwise release carbon you could offset your life’s carbon by sponsoring 
+                just 37 meters squared of 2 meter deep blanket bog for €100!                
+            </p>
+        </div>
+    </div>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h2 class="content-header">Newsletter</h2>
+            <p class="text-content">
+                Sign up for our newsletter for more fun fact, useful hints on reducing your carbon 
+                footprint and other news and events relating to Wild Carbon.           
             </p>
         </div>
     </div>
