--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <!-- css links -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         {% block extra_css %}
         {% endblock %}
@@ -145,7 +146,7 @@
                             <div class="logo-company"><strong>Wild Carbon</strong></div>
                         </a>
                         <div role="button" aria-label="Privacy-Policy" id="privacy-policy-link" class="privacy-policy">Privacy Policy</div>
-                        <div class="copyright-notice">&copy 2023 Wild Carbon</div>
+                        <div class="copyright-notice">&copy; 2023 Wild Carbon</div>
                     </div>
                     <div class="footer-right">
                         <div class="footer-right-contact" id="footer-right-contact">
