--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,6 +512,20 @@ main {
     box-shadow: 0px 0px 5px 1px var(--inner-content-container-shadow);
 }
 
+/* Mailchimp styles */
+.mc_embed_signup {
+    font:14px Helvetica,Arial,sans-serif; 
+    width: 600px;
+}
+
+#mc_embed_signup .helper_text {
+    background: none;
+}
+
+#mc_embed_signup .asterisk {
+    color: var(--content-font-colour);
+}
+
 /* Media queries */
 
 /* Media query for medium width screens */
