--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,10 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'profile' %}">Your Profile</a>
+                                    <a class="dropdown-item" href="{% url 'carbon_summary' %}">My Carbon Summary</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
                                 </li>
                                 {% if user.is_authenticated %}
                                     <li>
@@ -91,16 +94,15 @@
                                 <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
                             </li>
                             {% if user.is_superuser %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'list_plants' %}">Plan Admin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'location_plants_link' 1 %}">Plant Availability</a>
-                                </li>
-                            {% endif %}
-                            {% if user.is_staff %}
-                                <li>
-                                    <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#" id="administration-link" role="button" data-bs-toggle="dropdown" aria-expanded="false">Administration</a>
+                                    <ul class="dropdown-menu border-0" aria-labelledby="administration-link">
+                                        <li><a class="nav-link dropdown-item" href="{% url 'list_plants' %}">Plan Admin</a></li>
+                                        <li><a class="nav-link dropdown-item" href="{% url 'location_plants_link' 1 %}">Plant Availability</a></li>
+                                        {% if user.is_staff %}
+                                            <li><a class="nav-link dropdown-item" href="{% url 'admin:index' %}">Admin Page</a></li>
+                                        {% endif %}
+                                    </ul>
                                 </li>
                             {% endif %}
                         </ul>
