--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,6 +168,10 @@ header {
     text-decoration: underline;
 }
 
+.dropdown-item {
+    color: var(--main-font-colour);
+}
+
 .logo-company {
     color: var(--main-font-colour);
     display: flex;
