FEAT: Add how it works template, css, url, view, nav links

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -45,6 +45,12 @@
             <div class="image-nav-title-secondary">Get to know the team waiting to grow your trees</div>
         </div>
     </a>
+    <a href="{% url 'how_it_works' %}" class="image-nav-container how-it-works-image-nav-container">
+        <div class="image-nav-title">
+            <div class="image-nav-title-main">How it Works</div>
+            <div class="image-nav-title-secondary">Learn more about our service</div>
+        </div>
+    </a>
     <div class="content-container">
         <div class="inner-content-container">
             <h2 class="content-header">Coming Soon</h2>
