--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,9 @@
                                 <a class="nav-link" href="{% url 'carbon_capture' %}">Carbon Capture</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'how_it_works' %}">How it Works</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
                             </li>
                             {% if user.is_superuser %}
