--- a/plants/templates/plants/list_plant_records.html
+++ b/plants/templates/plants/list_plant_records.html
@@ -18,7 +18,6 @@
                     <th scope="col">Plant name</th>
                     <th scope="col">plant id</th>
                     <th scope="col">Date went pending</th>
-                    <th scope="col"></th>
                 </tr>
             </thead>
             {% for record in pending %}
@@ -33,7 +32,7 @@
                         {{ record.date_state_changed }}
                     </td>
                     <td class="py-3">
-                        <a href="#">Update State</a>
+                        <a href="{% url 'change_plant_state' record.pk %}">Update State</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -47,7 +46,6 @@
                     <th scope="col">Plant name</th>
                     <th scope="col">plant id</th>
                     <th scope="col">Date started growing</th>
-                    <th scope="col"></th>
                 </tr>
             </thead>
             {% for record in growing %}
@@ -62,7 +60,7 @@
                         {{ record.date_state_changed }}
                     </td>
                     <td class="py-3">
-                        <a href="#">Update State</a>
+                        <a href="{% url 'change_plant_state' record.pk %}">Update State</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -76,7 +74,6 @@
                     <th scope="col">Plant name</th>
                     <th scope="col">plant id</th>
                     <th scope="col">Date planted</th>
-                    <th scope="col"></th>
                 </tr>
             </thead>
             {% for record in planted %}
@@ -90,9 +87,6 @@
                     <td class="py-3">
                         {{ record.date_state_changed }}
                     </td>
-                    <td class="py-3">
-                        <a href="#">Update State</a>
-                    </td>
                 </tr>
             {% endfor %}
         </table>
@@ -101,7 +95,3 @@
 
 {% block modal_style %}modal-offset{% endblock %}
 {% block privacy_modal_style %}modal-offset{% endblock %}
-
-{% block extra_js %}
-    <script src="{% static 'js/wild_carbon/search_sort.js' %}"></script>
-{% endblock %}
