FEAT: Add template,view,url and form to add plant records

--- a/plants/templates/plants/list_plant_records.html
+++ b/plants/templates/plants/list_plant_records.html
@@ -10,6 +10,7 @@
 
 {% block content %}
     <h1>Plant Records</h1>
+    <a href="{% url 'add_plant_record' %}">Add plant record</a>
     <div class="table-responsive rounded d-none d-md-block">
         <h2>Pending Trees</h2>
         <table class="table table-sm table-borderless">
