--- a/plants/templates/plants/list_plant_records.html
+++ b/plants/templates/plants/list_plant_records.html
@@ -34,7 +34,7 @@
                     </td>
                     <td class="py-3">
                         <a href="{% url 'change_plant_state' record.pk %}">Update State</a>
-                        <a href="{% url 'delete_plant_record' record.pk %}">Delete Record</a>
+                        {% if record.order is None %}<a href="{% url 'delete_plant_record' record.pk %}">Delete Record</a>{% endif %}
                     </td>
                 </tr>
             {% endfor %}
@@ -63,7 +63,7 @@
                     </td>
                     <td class="py-3">
                         <a href="{% url 'change_plant_state' record.pk %}">Update State</a>
-                        <a href="{% url 'delete_plant_record' record.pk %}">Delete Record</a>
+                        {% if record.order is None %}<a href="{% url 'delete_plant_record' record.pk %}">Delete Record</a>{% endif %}
                     </td>
                 </tr>
             {% endfor %}
