--- a/plants/templates/plants/confirm_delete_plant_record.html
+++ b/plants/templates/plants/confirm_delete_plant_record.html
@@ -14,7 +14,7 @@
     <div>
         <form method="post">
             {% csrf_token %}
-            <p class="confirm-delete"><br><br>Are you sure you want to delete the record for plant with id "{{ object.plant_number }}"?</p>
+            <p class="confirm-delete"><br><br>Are you sure you want to delete the record for the {{ object.plant.common_name }} with id "{{ object.plant_number }}"?</p>
             {{ form }}
             <div class="button-container">
                 <button type="submit">Delete Plant Record</button>
